--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,9 @@
 ﻿/********************************************/
 /*program:jiuyiwangxuanchuang*/
 /*time:2015.12.2*/
-/*author:lijiancong*/
-/*email:1430004183@qq.com*/
-/*copyright:globalexibit*/
+/*author:hpt*/
+/*email:269110624@qq.com*/
+
 /********************************************/
 /* css  reset */
 html, body ,form{
